Commit merge